# MiniFender_auth_server

./: CMakeLists.txt  README.md  auth_settings.ini  authserver.cpp  authserver.h  clihandler.cpp  clihandler.h  core.cpp  core.h  dbmanager.cpp  dbmanager.h  main.cpp
